--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-button": "^1.2.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.1.51",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5"
